--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ posts_max_related: 3
 posts_min_common_tags: 2
 
 collections:
-  experience:
+  projects:
     output: true
     permalink: /work/experience/:path/
   project_team_members:
