Add new employee profiles

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1696,10 +1696,10 @@
   image_description: Photo of Ori Hoffer
   position: Head of Marketing & Communications
   bio: >
-   Ori's a marketing, communications, and content specialist, who formerly worked for
-   18F and the Beeck Center for Social Impact and Innovation. Ori's also worked in
-   TV, radio, and digital media &mdash; on both the journalism and corporate communications
-   sides. He lives in Virginia.
+    Ori's a marketing, communications, and content specialist, who formerly worked for
+    18F and the Beeck Center for Social Impact and Innovation. Ori's also worked in
+    TV, radio, and digital media &mdash; on both the journalism and corporate communications
+    sides. He lives in Virginia.
   active: true
   order: 450
   socials:
@@ -1813,11 +1813,11 @@
   image_description: Illustration of Derek Tam
   position: Product Manager Apprentice
   bio: >
-   Derek's a product manager apprentice who's excited about using modern technological
-   practices in public-facing work. He was a 2020 Civic Digital Fellow with
-   the General Services Administration, where he worked on Vote.gov. He recently graduated
-   with a degree in Systems Engineering from the University of Illinois at Urbana-Champaign.
-   Derek lives in Massachusetts.
+    Derek's a product manager apprentice who's excited about using modern technological
+    practices in public-facing work. He was a 2020 Civic Digital Fellow with
+    the General Services Administration, where he worked on Vote.gov. He recently graduated
+    with a degree in Systems Engineering from the University of Illinois at Urbana-Champaign.
+    Derek lives in Massachusetts.
   active: true
   order: 500
   socials:
@@ -1839,11 +1839,11 @@
   image_description: Photo of Leslie Garner Franklin
   position: Product Manager
   bio: >
-   Leslie's a product manager with nearly two decades of experience leading teams and
-   change efforts across the non-profit and public sectors. She's passionate about the role
-   technology and design play in delivering great services. She specializes in
-   cross-functional team leadership, user experience research, and service design.
-   Leslie lives in North Carolina.
+    Leslie's a product manager with nearly two decades of experience leading teams and
+    change efforts across the non-profit and public sectors. She's passionate about the role
+    technology and design play in delivering great services. She specializes in
+    cross-functional team leadership, user experience research, and service design.
+    Leslie lives in North Carolina.
   active: true
   order: 510
   socials:
@@ -1855,3 +1855,279 @@
       link: https://www.linkedin.com/in/lesliegarnerfranklin/
       link_description: Leslie's LinkedIn Account
       fa_icon_name: linkedin
+- name: chun-yen
+  fname: Chun
+  lname: Yen
+  full_name: Chun Yen
+  short_name: C. Yen
+  profile_path: /company/about/#chun-yen
+  image: /img/people/eleanor-roosevelt.png
+  image_description: Photo of
+  position: DevOps Engineer
+  bio: >
+    Chun's passionate about automating everything and creating great experiences for other engineers. He specializes in DevOps engineering, cloud computing, and security. Chun lives in Maryland.
+  active: true
+  order: 520
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/chun-yen-43192a4a
+      link_description: Chun Yen's LinkedIn Account
+      fa_icon_name: linkedin
+- name: nicole-wright
+  fname: Nicole
+  lname: Wright
+  full_name: Nicole Wright
+  short_name: N. Wright
+  profile_path: /company/about/#nicole-wright
+  image: /img/people/nicole-wright.jpg
+  image_description: Photo of Nicole Wright
+  position: Product Manager
+  bio: >
+    Nicole's a product manager, who's drawn to delivering products that help people. Most recently, she worked with the Air Force's Kessel Run program to modernize in-air refueling planning and platform development. Nicole lives in Massachusetts.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/nmwright/
+      link_description: Nicole Wright's LinkedIn Account
+      fa_icon_name: linkedin
+- name: tiffany-nieh
+  fname: Tiffany
+  lname: Nieh
+  full_name: Tiffany Nieh
+  short_name: T.  Nieh
+  profile_path: /company/about/#tiffany-nieh
+  image: /img/people/eleanor-roosevelt.png
+  image_description: Photo of Tiffany Nieh
+  position: Product Designer
+  bio: >
+    Tiffany's a product designer who loves understanding people's needs and creating solutions that have a positive impact. Most recently, she worked at Pivotal Labs / VMware Tanzu where she helped startups, large enterprises, and government organizations build software using modern practices. Tiffany lives in California.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/tiffanynieh
+      link_description: Tiffany Nieh's LinkedIn Account
+      fa_icon_name: linkedin
+- name: karthik-patil
+  fname: Karthik
+  lname: Patil
+  full_name: Karthik Patil
+  short_name: K. Patil
+  profile_path: /company/about/#karthik-patil
+  image: /img/people/karthik-patil.jpg
+  image_description: Photo of Karthik Patil
+  position: Product Manager
+  bio: >
+    Karthik's a product manager with several years of experience across a range of industries. Most recently, he worked at Pivotal Labs / VMware Tanzu. Karthik graduated from Creighton University with degrees in Economics and Business Intelligence and Analytics. He lives in Texas.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/karthikpatil/
+      link_description: Karthik Patil's LinkedIn Account
+      fa_icon_name: linkedin
+    - name: Personal Website
+      link: https://karthikpatil.com/
+      link_description: Karthik's Personal Website
+      fa_icon_name: home
+- name: becca-woodberry
+  fname: Becca
+  lname: Woodberry
+  full_name: Becca Woodberry
+  short_name: B. Woodberry
+  profile_path: /company/about/#becca-woodberry
+  image: /img/people/eleanor-roosevelt.png
+  image_description: Photo of Becca Woodberry
+  position: Head of Recruiting
+  bio: >
+    Becca's passionate about building great organizations by hiring and supporting great people. Previously, she supported staffing needs at Waymo, LinkedIn, and other high-tech companies in the Silicon Valley area. Becca specializes in staffing, onboarding, people leadership, and diversity, equity, and inclusion. She lives in Arizona.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/woodberry/
+      link_description: Becca Woodberry's LinkedIn Account
+      fa_icon_name: linkedin
+- name: nathan-carter
+  fname: Nathan
+  lname: Carter
+  full_name: Nathan Carter
+  short_name: N. Carter
+  profile_path: /company/about/#nathan-carter
+  image: /img/people/nathan-carter.svg
+  image_description: Photo of Nathan Carter
+  position: Software Engineer
+  bio: >
+    Nathan's a software engineer driven by building digital services for public good. Prior to becoming an engineer, he ran his own bakery. Nathan lives in North Carolina.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/nathan-carter-202775141/
+      link_description: Nathan Carter's LinkedIn Account
+      fa_icon_name: linkedin
+    - name: GitHub
+      link: https://github.com/nathancrtr
+      link_description: Nathan's GitHub Account
+      fa_icon_name: github
+- name: matt-goldberg
+  fname: Matt
+  lname: Goldberg
+  full_name: Matt Goldberg
+  short_name: M. Goldberg
+  profile_path: /company/about/#matt-goldberg
+  image: /img/people/matt-goldberg.jpg
+  image_description: Photo of Matt Goldberg
+  position: Content Strategist Apprentice
+  bio: >
+    Matt's a content strategist and storyteller with a background in clean tech innovation. He enjoys making complex information accessible to everyone. He also cares deeply about improving people's lives and livelihoods. Matt lives in Pennsylvania.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: www.linkedin.com/in/matthew-goldberg-01586854
+      link_description: Matt Goldberg's LinkedIn Account
+      fa_icon_name: linkedin
+- name: nick-blake
+  fname: Nick
+  lname: Blake
+  full_name: Nick Blake
+  short_name: N. Blake
+  profile_path: /company/about/#nick-blake
+  image: /img/people/nick-blake.jpg
+  image_description: Photo of Nick Blake
+  position: Product Designer Apprentice
+  bio: >
+    Nick's a product designer, who's studying psychology and human-computer interaction at the Washington University in St. Louis. He most recently worked as a Civic Digital Fellow at the U.S. Citizenship and Immigration Services. Nick lives in Missouri.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/nicholas-blake-3aa402178
+      link_description: Nick Blake's LinkedIn Account
+      fa_icon_name: linkedin
+    - name: Personal Website
+      link: https://nickblake.myportfolio.com/
+      link_description: Nick's Personal Website
+      fa_icon_name: home
+- name: bob-zhao
+  fname: Bob
+  lname: Zhao
+  full_name: Bob Zhao
+  short_name: B. Zhao
+  profile_path: /company/about/#bob-zhao
+  image: /img/people/bob-zhao.jpg
+  image_description: Photo of Bob Zhao
+  position: Software Engineer Intern
+  bio: >
+    Bob's a software engineer in pursuit of solving large-scale problems that matter. In 2020, he served as Civic Digital Fellow at the National Institutes of Health, and is currently pursuing a masters degree in computer science at  Washington University in St. Louis. He lives in Missouri.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/bob-z-1901/
+      link_description: Bob Zhao's LinkedIn Account
+      fa_icon_name: linkedin
+    - name: GitHub
+      link: https://github.com/fzhao99
+      link_description: Bob's GitHub Account
+      fa_icon_name: github
+- name: ashton-tu
+  fname: Ashton
+  lname: Tu
+  full_name: Ashton Tu
+  short_name: A. Tu
+  profile_path: /company/about/#ashton-tu
+  image: /img/people/eleanor-roosevelt.png
+  image_description: Photo of Ashton Tu
+  position: Product Designer Apprentice
+  bio: >
+    Ashton's a product designer, who recently graduated from the University of Southern California. As a 2020 Civic Digital Fellow with the General Services Administration, she discovered her passion for civic tech. Ashton lives in California.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/ashton-tu
+      link_description: Ashton Tu's LinkedIn Account
+      fa_icon_name: linkedin
+- name: andrew-lloyd
+  fname: Andrew
+  lname: Lloyd
+  full_name: Andrew Lloyd
+  short_name: A. Lloyd
+  profile_path: /company/about/#andrew-lloyd
+  image: /img/people/eleanor-roosevelt.png
+  image_description: Photo of Andrew Lloyd
+  position: DevOps Engineer
+  bio: >
+    Andrew's passionate about creating great developer experiences through DevOps. He's spent over 15 years with the Air Force as a service member. Andrew specializes in DevOps engineering, software engineering, and cloud computing. He lives in Washington.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/andrewmarklloyd/
+      link_description: Andrew Lloyd's LinkedIn Account
+      fa_icon_name: linkedin
+    - name: GitHub
+      link: https://github.com/andrewmarklloyd
+      link_description: Andrew's GitHub Account
+      fa_icon_name: github
+- name: tim-niehoff
+  fname: Tim
+  lname: Niehoff
+  full_name: Tim Niehoff
+  short_name: T. Niehoff
+  profile_path: /company/about/#tim-niehoff
+  image: /img/people/tim-niehoff.jpg
+  image_description: Photo of Tim Niehoff
+  position: Product Manager
+  bio: >
+    Tim's a seasoned product manager with a passion for building small, releasing early, and iterating often. Most recently, he worked at Pivotal Labs / VMware Tanzu where he helped transform the way startups and large enterprises build software. Tim lives in Illinois.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/timniehoff/
+      link_description: Tim Niehoff's LinkedIn Account
+      fa_icon_name: linkedin
+- name: pri-kiser
+  fname: Pri
+  lname: Kiser
+  full_name: Pri Kiser
+  short_name: P. Kiser
+  profile_path: /company/about/#pri-kiser
+  image: /img/people/pri-kiser.jpg
+  image_description: Photo of Pri Kiser
+  position: Product Designer
+  bio: >
+    Pri's a product designer who draws on her background in neuroscience and human-computer interaction to create delightful user experiences. She previously worked at Pivotal Labs / VMware Tanzu where she built high-impact products and scaled design practices across various types of organizations. Pri lives in Texas.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/prikiser/
+      link_description: Pri Kiser's LinkedIn Account
+      fa_icon_name: linkedin
+- name: taylor-curtiss
+  fname: Taylor
+  lname: Curtiss
+  full_name: Taylor Curtiss
+  short_name: T. Curtiss
+  profile_path: /company/about/#taylor-curtiss
+  image: /img/people/taylor-curtiss.jpg
+  image_description: Photo of Taylor Curtiss
+  position: Product Designer
+  bio: >
+    Taylor's passionate about improving government services through user-centered design. She’s an Air Force veteran and most recently worked as a product designer at Kessel Run. Taylor specializes in research, design, strategic thinking, and building high-performing teams. She lives in Massachusetts.
+  active: true
+  order: 530
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/taylor--curtiss/
+      link_description: Taylor Curtiss's LinkedIn Account
+      fa_icon_name: linkedin
+    - name: Personal Website
+      link: https://www.taylorcurtiss.com/
+      link_description: Taylor's Personal Website
+      fa_icon_name: home
