--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2125,7 +2125,7 @@
   socials:
     - name: LinkedIn
       link: https://www.linkedin.com/in/taylor--curtiss/
-      link_description: Taylor Curtiss's LinkedIn Account
+      link_description: Taylor Curtiss' LinkedIn Account
       fa_icon_name: linkedin
     - name: Personal Website
       link: https://www.taylorcurtiss.com/
