Add speaker collection, speakers, and add talk filter type to employee filter

--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,9 @@ collections:
     output: false
     permalink: /thoughts/talks/:path/
     sort_by: order
+  talk_speakers:
+    output: true
+    permalink: /thoughts/talks/speaker/:path/
 
 # Pagination Settings
 pagination:
