--- a/_data/team.yml
+++ b/_data/team.yml
@@ -39,6 +39,10 @@
       link: /work/team-member/chris-cairns/
       link_description: Chris' Project Work
       fa_icon_name: wrench
+    - name: Talks
+      link: /thoughts/talks/speaker/chris-cairns/
+      link_description: Chris' Talks
+      fa_icon_name: comment
 - name: sean-johnson
   fname: Sean
   lname: Johnson
@@ -76,6 +80,10 @@
       link: /work/team-member/sean-johnson/
       link_description: Sean's Project Work
       fa_icon_name: wrench
+    - name: Talks
+      link: /thoughts/talks/speaker/sean-johnson/
+      link_description: Sean's Talks
+      fa_icon_name: comment
 - name: robert-read
   fname: Robert
   lname: Read
@@ -118,6 +126,10 @@
       link: /work/team-member/robert-read/
       link_description: Robert's Project Work
       fa_icon_name: wrench
+    - name: Talks
+      link: /thoughts/talks/speaker/robert-read/
+      link_description: Robert's Talks
+      fa_icon_name: comment
 - name: john-teeter
   fname: John
   lname: Teeter
@@ -180,6 +192,10 @@
       link: /thoughts/blog/author/geoff-mulligan/
       link_description: Geoff's Blog Posts
       fa_icon_name: pencil
+    - name: Talks
+      link: /thoughts/talks/speaker/geoff-mulligan/
+      link_description: Geoff's Talks
+      fa_icon_name: comment
 - name: kin-lane
   fname: Kin
   lname: Lane
@@ -223,6 +239,10 @@
       link: /work/team-member/kin-lane/
       link_description: Kin's Project Work
       fa_icon_name: wrench
+    - name: Talks
+      link: /thoughts/talks/speaker/kin-lane/
+      link_description: Kin's Talks
+      fa_icon_name: comment
 - name: josh-dorothy
   fname: Josh
   lname: Dorothy
