--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -3,7 +3,7 @@
 #   url: https://skylight.workable.com/jobs/604049
 #   category: Engineering
 #   location: Washington DC
-#   summary: Save lives
+#   summary: Save lives (optional)
 #   order: 10
 
 # Categories:
