--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # If you change this file, please restart the server process.
 
 # Site settings
-title: Skylight - Digital Government Consulting
+title: Skylight - digital government consulting
 email: hello@skylight.digital
 description: Skylight is a digital consultancy using design and technology to help government agencies deliver better public services.
 keywords: digital consulting, digital government, digital transformation, digital services
