--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1969,8 +1969,8 @@
   full_name: Becca Woodberry
   short_name: B. Woodberry
   profile_path: /company/about/#becca-woodberry
-  image: /img/people/becca-woodberry.png
-  image_description: Illustration of Becca Woodberry
+  image: /img/people/becca-woodberry.jpg
+  image_description: Photo of Becca Woodberry
   position: Head of Recruiting
   bio: >
     Becca's passionate about building great organizations by hiring and supporting great people. Previously, she supported staffing needs at Waymo, LinkedIn, and other high-tech companies in the Silicon Valley area. Becca specializes in staffing, onboarding, people leadership, and diversity, equity, and inclusion. She lives in Arizona.
@@ -2173,7 +2173,7 @@
   full_name: Laura Kerry
   short_name: L. Kerry
   profile_path: /company/about/#laura-kerry
-  image: /img/people/laura-kerry.png
+  image: /img/people/laura-kerry.jpg
   image_description: Photo of Laura Kerry
   position: Content Strategist
   bio: >
