--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ linkedin_url: https://www.linkedin.com/company/skylight-hq
 carrot_url: https://carrot.io/skylight/
 hackerone_url: https://hackerone.com/skylight_qgvpb
 slack_invite_url: ""
+youtube_url: https://www.youtube.com/channel/UCbNzANEv5xYqfMbDrv8kcEw
 
 # Build settings
 incremental: true
