--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2011,7 +2011,7 @@
   profile_path: /company/about/#matt-goldberg
   image: /img/people/matt-goldberg.jpg
   image_description: Photo of Matt Goldberg
-  position: Content Strategist Apprentice
+  position: Content Strategist
   bio: >
     Matt's a content strategist and storyteller with a background in clean tech innovation. He enjoys making complex information accessible to everyone. He also cares deeply about improving people's lives and livelihoods. Matt lives in Pennsylvania.
   active: true
