--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1646,7 +1646,7 @@
   profile_path: /company/about/#rebecca-lubitzmarchena
   image: /img/people/rebecca-lubitzmarchena.jpg
   image_description: Photo of Rebecca Lubitz-Marchena
-  position: UX Content Strategist
+  position: Content Strategist
   bio: >
     Rebecca's a content strategist with a background in product marketing,
     UX writing, and localization. She enjoys turning complex concepts into plain
