--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1929,8 +1929,8 @@
   full_name: Tiffany Nieh
   short_name: T.  Nieh
   profile_path: /company/about/#tiffany-nieh
-  image: /img/people/tiffany-nieh.png
-  image_description: Illustration of Tiffany Nieh
+  image: /img/people/tiffany-nieh.jpg
+  image_description: Photo of Tiffany Nieh
   position: Product Designer
   bio: >
     Tiffany's a product designer who loves understanding people's needs and creating solutions that have a positive impact. Most recently, she worked at Pivotal Labs / VMware Tanzu where she helped startups, large enterprises, and government organizations build software using modern practices. Tiffany lives in California.
@@ -2071,8 +2071,8 @@
   full_name: Ashton Tu
   short_name: A. Tu
   profile_path: /company/about/#ashton-tu
-  image: /img/people/ashton-tu.png
-  image_description: Illustration of Ashton Tu
+  image: /img/people/ashton-tu.jpg
+  image_description: Photo of Ashton Tu
   position: Product Designer Apprentice
   bio: >
     Ashton's a product designer, who recently graduated from the University of Southern California. As a 2020 Civic Digital Fellow with the General Services Administration, she discovered her passion for civic tech. Ashton lives in California.
