--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2031,7 +2031,7 @@
   image_description: Photo of Nick Blake
   position: Product Designer Apprentice
   bio: >
-    Nick's a product designer, who's studying psychology and human-computer interaction at the Washington University in St. Louis. He most recently worked as a Civic Digital Fellow at the U.S. Citizenship and Immigration Services. Nick lives in Missouri.
+    Nick's a product designer, who's studying psychology and human-computer interaction at the Washington University in St. Louis. They most recently worked as a Civic Digital Fellow at the U.S. Citizenship and Immigration Services. Nick lives in Missouri.
   active: true
   order: 530
   socials:
